--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,5 @@ author:
   resume: asd123
   bio: Your stylish, minimalist theme!
   email_md5: 726351295ec82e145928582f595aa3aa
+  
+BASE_PATH: http://dbtek.github.io/dbyll
