tags & categories support added

--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,7 @@ author:
   bio: Your stylish, minimalist theme!
   email_md5: 726351295ec82e145928582f595aa3aa
   
-BASE_PATH: http://dbtek.github.io/dbyll
+BASE_PATH: http://dbtek.github.io/dbyll/
+
+categories_path: categories.html
+tags_path: tags.html
