--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: dbyll
 author:
   name: dbyll
   email: dbyll@ismaildemirbilek.com
-  github: asd123
+  github: dbtek
   twitter: asd123
   pinterest: asd123
   linkedin: asd123
