post categories and tags fixed

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 
 server: true # runs a local server
 paginate: 10 # pagination based on number of posts
+paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 
 title: dbyll
