--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ auto: true # automatically update your jekyll
 server: true # runs a local server
 paginate: 10 # pagination basted on number of posts
 exclude: ["README.md"] # files to exclude
+pygments: true
 
 title: dbyll
 author:
