--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author:
   email_md5: 726351295ec82e145928582f595aa3aa
   
 BASE_PATH: /
+full_url: http://ismaildemirbilek.com/dbyll
 
 categories_path: categories.html
 tags_path: tags.html
