--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,10 @@
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
+pygments: true
 
 title: dbyll
+description: Stylish Jekyll Theme
 author:
   name: dbyll
   email: dbyll@ismaildemirbilek.com
@@ -16,8 +18,25 @@ author:
   bio: Your stylish, minimalist theme!
   email_md5: 726351295ec82e145928582f595aa3aa
   
-BASE_PATH: /
-full_url: http://ismaildemirbilek.com/dbyll
-
+rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
+
+BASE_PATH:
+
+  # All links will be namespaced by BASE_PATH if defined.
+  # Links in your website should always be prefixed with {{ site.BASE_PATH }}
+  #
+  # CNAME (http://yourcustomdomain.com)
+  #   DO NOT SET BASE_PATH JUST LEAVE IT BLANK 
+  #   (urls will be prefixed with "/" and work relatively)
+  #
+  # GitHub Pages (http://username.github.io)
+  #   DO NOT SET BASE_PATH JUST LEAVE IT BLANK 
+  #   (urls will be prefixed with "/" and work relatively)
+  #
+  # GitHub Project Pages (http://username.github.io/project-name)
+  #
+  #   A GitHub Project site exists in the `gh-pages` branch of one of your repositories.
+  #  REQUIRED! Set BASE_PATH to: http://username.github.io/project-name
+  #
