--- a/_config.yml
+++ b/_config.yml
@@ -17,15 +17,16 @@ author:
   resume: asd123
   bio: Your stylish, minimalist theme!
   email_md5: 726351295ec82e145928582f595aa3aa
-  
-BASE_PATH: http://dbtek.github.io/dbyll
 
 rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
 
+BASE_PATH: http://dbtek.github.io/dbyll
+
   # All links will be namespaced by BASE_PATH if defined.
   # Links in your website should always be prefixed with {{ site.BASE_PATH }}
+  # Do not put a "/" at the end of the url.
   #
   # CNAME (http://yourcustomdomain.com)
   #   DO NOT SET BASE_PATH JUST LEAVE IT BLANK 
