--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   name: dbyll
   email: dbyll@ismaildemirbilek.com
   github: dbtek
-  twitter: asd123
+  twitter: dbtek
   pinterest: asd123
   linkedin: asd123
   bio: Your stylish, minimalist theme!
