--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author:
   email: dbyll@ismaildemirbilek.com
   github: dbtek
   twitter: dbtek
+  skype: dbtek
   pinterest: asd123
   linkedin: asd123
   bio: Your stylish, minimalist theme!
