--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
+comments: True
 
 
 defaults:
