--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
-
+disqus: dbyll
+google_analytics: dbyll
 
 defaults:
   -
