--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,26 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
+disqus: flyingwelkin
+google_analytics:
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: Flying Welkin
 
-description: Stylish Jekyll Theme
-author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+description: Palais-de-Ciel pour moi et mes amis
+author: Esperisto
+  name: Flying Welkin
+  email: esperisto@gmail.com
+  github: esperisto
+  twitter: esperisto
+  pinterest:
+  linkedin:
+  bio: Palais-de-Ciel pour moi et mes amis
+  email_md5:
 
 rss_path: feed.xml
 categories_path: categories.html
