--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: Stylish Jekyll Theme
 author:
   name: jjongun
   email: jjongun@naver.com
-  github: dbtek
+  github: 
   twitter: 
   pinterest: 
   linkedin: 
