--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
       title: jjongun
 
 description: Stylish Jekyll Theme
-author:
+author: jjongun@naver.com
   name: jjongun
   email: jjongun@naver.com
   github: 
