--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ defaults:
     scope:
       path: "" # empty string for all files
     values:
-      title: jjongun
+      title: Programing note
 
 description: Stylish Jekyll Theme
 author: 
