--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ defaults:
 description: Stylish Jekyll Theme
 author: 
   name: jjongun
-  email: jjongun@naver.com
+  email: 
   github: 
   twitter: 
   pinterest: 
