--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,10 @@ author:
   pinterest: asd123
   linkedin: asd123
   bio: Your stylish, minimalist theme!
+  facebook: thanhconsl
+  daynhauhoc: thanhmssl10
   email_md5: 726351295ec82e145928582f595aa3aa
+
 
 rss_path: feed.xml
 categories_path: categories.html
