--- a/_config.yml
+++ b/_config.yml
@@ -5,26 +5,26 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
+disqus: #dbyll
+google_analytics: #dbyll
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: dafuloth.me
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: David Thai
+  email: #dbyll@ismaildemirbilek.com
+  github: dafuloth
+  twitter: dafuloth
+  pinterest: #asd123
+  linkedin: #asd123
+  bio: A simple static site where I can concentrate on what matters
+  email_md5: #726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
 categories_path: categories.html
