--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ google_analytics: #dbyll
 defaults:
   -
     scope:
-      path: "" # empty string for all files
+      path: "/dbyll" # empty string for all files
     values:
       title: dafuloth.me
 
