--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
 
+baseurl: /dbyll
+
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
