--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   twitter: dafuloth
   pinterest: #asd123
   linkedin: #asd123
-  bio: A simple static site where I can concentrate on what matters
+  bio: A simple static site where I can focus on what matters
   email_md5: #726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
