--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ defaults:
 description: Stylish Jekyll Theme
 author:
   name: David Thai
-  email: #dbyll@ismaildemirbilek.com
-  github: dafuloth
+  email: davidthai@dafuloth.me
+  #github: dafuloth
   twitter: dafuloth
   pinterest: #asd123
   linkedin: #asd123
   bio: A simple static site where I can focus on what matters
-  email_md5: #726351295ec82e145928582f595aa3aa
+  email_md5: 52d0ce3f83fa2f7f17b9fc792f1383b9
 
 rss_path: feed.xml
 categories_path: categories.html
