--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   twitter: dafuloth
   pinterest: #asd123
   linkedin: #asd123
-  bio: just a simple site where I can focus on what matters
+  bio: A simple site where I can focus on what matters
   email_md5: 52d0ce3f83fa2f7f17b9fc792f1383b9
 
 rss_path: feed.xml
