--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
 disqus: #dbyll
-google_analytics: #dbyll
+google_analytics: UA-50002010-1
 
 defaults:
   -
