--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: pygments
 markdown: kramdown
-disqus: #dbyll
+disqus: dafuloth
 google_analytics: UA-50002010-1
 
 defaults:
