--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 # visit https://github.com/mojombo/jekyll/wiki/Configuration for more settings
 
-paginate: 10 # pagination based on number of posts
-paginate_path: "page:num"
+
 exclude: ["README.md"] # files to exclude
-highlighter: pygments
+gems: [jekyll-paginate]
+paginate: 5 # pagination based on number of posts
+paginate_path: "page:num"
+highlighter: rouge
 markdown: kramdown
 comments: true
 
