--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
 disqus: javapark-github-io
 google_analytics: UA-38514061-3
