--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
 
+BASE_PATH: /dbyll
 # set it as url of an image
 # sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
 
