--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
-highlighter: pygments
+highlighter: rogue
 markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
