-- Minor changes on read me.

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ defaults:
     values:
       title: Simplicity is prerequisite for reliability ― Edsger W. Dijkstra
 
-description: Stylish Jekyll Theme
+description: muzir Tech Blog
 author:
   name: muzir
   email: baycelik_erhun@hotmail.com
