--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   twitter: erhunbaycelik
   stackoverflow: 1577363
   linkedin: erhunbaycelik/
-  bio: Waiting is painful. Forgetting is painful. But not knowing which to do is the worse kind of suffering. Paulo Coelho	
+  bio: A software developer who loves open source and try to contribute few of them.
   email_md5: 5e37bdad6bcec0a281810a24de56aede
 rss_path: feed.xml
 categories_path: categories.html
