adding gitlab variable

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ author:
   name: dbyll
   email: dbyll@ismaildemirbilek.com
   github: dbtek
+  gitlab: dbtek
   twitter: dbtek
   pinterest: asd123
   linkedin: asd123
