--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ highlighter: rouge
 markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
-title: dbyll
+title: Community Owned Infrastructure
 
 defaults:
   -
@@ -24,7 +24,7 @@ author:
   twitter: dbtek
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  bio: A very rough prototype here to find all the problems
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
