--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-google_analytics:
 title: Community Owned Infrastructure
 
 defaults:
@@ -17,18 +16,12 @@ defaults:
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
+  name: Scholarly Publishing and Academic Resources Coalition
+  email: joe@sparcopen.org
+  github: @sparcopen
+  twitter: @sparc_na
+  facebook: sparcopen
   bio: A very rough prototype here to find all the problems
-  email_md5: 726351295ec82e145928582f595aa3aa
-
-rss_path: feed.xml
-categories_path: categories.html
-tags_path: tags.html
 
 # set it as url of an image
 # sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
