--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: Stylish Jekyll Theme
 author:
   name: Scholarly Publishing and Academic Resources Coalition
   email: joe@sparcopen.org
-  github: @sparcopen
+  github: sparcopen
   twitter: @sparc_na
   facebook: sparcopen
   bio: A very rough prototype here to find all the problems
