--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   name: Scholarly Publishing and Academic Resources Coalition
   email: joe@sparcopen.org
   github: sparcopen
-  twitter: @sparc_na
+  twitter: sparc_na
   facebook: sparcopen
   bio: A very rough prototype here to find all the problems
 
