--- a/_config.yml
+++ b/_config.yml
@@ -5,27 +5,27 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
-google_analytics: dbyll
-title: dbyll
+disqus: YoungKyonYou
+google_analytics: YoungKyonYou
+title: MyWay
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: MyWay
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
+  name: YoungKyonYou
+  email: youngkyon1324@naver.com
+  github: https://github.com/YoungKyonYou
+  twitter: young
   pinterest: asd123
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  bio: Integration of Knowledge
+  email_md5: youngkyon1324@naer.com
 
 rss_path: feed.xml
 categories_path: categories.html
