--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: Stylish Jekyll Theme
 author:
   name: YoungKyonYou
   email: youngkyon1324@naver.com
-  github: https://github.com/YoungKyonYou
+  github: /YoungKyonYou
   twitter: young
   pinterest: asd123
   linkedin: asd123
