--- a/_config.yml
+++ b/_config.yml
@@ -39,3 +39,9 @@ plugins:
   - jekyll-paginate
   - jekyll-feed
   - jemoji
+markdown: kramdown
+kramdown:
+    highlighter: rouge
+    syntax_highlighter_opts:
+        block:
+            line_numbers: true
