--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ author:
   name: jurre
   # email: jurre@osx.eu
   github: erruj09
+  instagram: erruj09
+  spotify: swzf8q2e0tuvj3a7e6qsvrmag
+  discord: erruj09#6478
   # twitter: dbtek
   # pinterest: asd123
   # linkedin: asd123
