--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: My private website showcasing all my projects.
 author:
   name: Jurre
   github: erruj09
-  instagram: erruj09
+  # instagram: 
   spotify: swzf8q2e0tuvj3a7e6qsvrmag
   discord: erruj09#6478
   # twitter: 
