--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   # twitter: 
   # pinterest: 
   # linkedin: 
-  bio: I'm learning software development!
+  bio: I'm learning software development! And makes small programming tutorials.
   email_md5: 4117c229240eddd48e095bc90a0d955f
 
 rss_path: feed.xml
