--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,15 @@ defaults:
     scope:
       path: "" # empty string for all files
     values:
-      title: dbyll
+      title: blog.gullbrandsson.dk
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  name: Emil Gullbrandsson  
+  github: egullbrandsson 
+  twitter: emilguden 
+  linkedin: emil-gullbrandsson-54959a5b  
+  bio: Åker kickbike och skiter i allt!
 
 rss_path: feed.xml
 categories_path: categories.html
