--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,11 @@ author:
   linkedin: emil-gullbrandsson-54959a5b  
   bio: Åker kickbike och skiter i allt!
 
-rss_path: feed.xml
 categories_path: categories.html
 tags_path: tags.html
 
 # set it as url of an image
-# sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
+sidebar_background_image: https://www.dropbox.com/s/g9h23zrycedxtk5/sky.png?raw=1
 
 BASE_PATH:
 
