--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ defaults:
 
 description: Stylish Jekyll Theme
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
+  name: iamdhyunn
+  email: hyunily12@naver.com
   github: dbtek
   twitter: dbtek
   pinterest: asd123
